add "Design an Ordered Stream"