@@ -22,14 +22,16 @@ public class DesignOrderedStream {
 
         private List<String> getValues() {
             int start = ptr;
+
             for (int i = start; i < values.length; i++) {
-                if (values[i] == null || i == values.length - 1) {
-                    ptr = values[i] == null ? i : i + 1;
+                if (values[i] == null) {
+                    ptr = i;
                     return Arrays.asList(Arrays.copyOfRange(values, start, ptr));
                 }
             }
 
-            return List.of();
+            ptr = values.length - 1;
+            return Arrays.asList(Arrays.copyOfRange(values, start, values.length));
         }
 
     }
